cmake_minimum_required(VERSION 3.20)
project(testcallback)

if(UNIX)
 set(CMAKE_CXX_STANDARD 14)
else()
 set(CMAKE_CXX_STANDARD 20)
endif()
add_library(market SHARED market/link.h market/MarketData.cpp market/MarketData.h market/MarketDataIf.h)
add_library(marketjni SHARED marketjni/link.h marketjni/MarketDataC.cpp marketjni/MarketDataC.h marketjni/MarketDataImpl.cpp marketjni/MarketDataImpl.h)
add_executable(testcallback main.c)
target_compile_definitions(market PRIVATE MARKETDATA_EXPORTS)
target_compile_definitions(marketjni PRIVATE MARKETDATAJNI_EXPORTS)
target_link_libraries(marketjni market)
target_link_libraries(testcallback marketjni)
